Fixed teaching format

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,7 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
-# University of Alabama
+University of Alabama
+======
 
 * <b>Graduate Teaching Assistant,</b> Department of Physics and Astronomy, University of Alabama, Tuscaloosa, AL
 
@@ -24,7 +25,8 @@ author_profile: true
 	<br> 60 students / section
 
 
-# Michigan Technological University
+Michigan Technological University
+======
 
 * <b>Teaching Assistant,</b> Department of Mathematical Sciences, Michigan Technological University, Houghton, MI
 
