--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,40 +7,47 @@ author_profile: true
 
 {% include base_path %}
 
-University of Alabama
-======
+<h2>University of Alabama</h2>
 
-* <b>Graduate Teaching Assistant,</b> Department of Physics and Astronomy, University of Alabama, Tuscaloosa, AL
-
-	* Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 3 sections, Spring 2018
-	* Course assistant, PH 105 <i>General Physics with Calculus I</i> (studio format), 1 section, Spring 2014
-	* Lab instructor, PH 106 <i>General Physics with Calculus II</i>, 1 section, Fall 2013
-	* Lab instructor, PH 101 <i>General Physics I</i>, 2 sections, Fall 2013
-	* Lab instructor, PH 102 <i>General Physics II</i>, 1 section, Summer 2013
-	* Lab instructor, PH 101 <i>General Physics I</i>, 1 section, Summer 2013
-	* Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Spring 2013
-	* Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Fall 2012
-
-	<br>
-	<br> 60 students / section
-
-
-Michigan Technological University
-======
-
-* <b>Teaching Assistant,</b> Department of Mathematical Sciences, Michigan Technological University, Houghton, MI
-
-  * Grader, MA 4515 <i>Introduction to Partial Differential Equations</i>, Spring 2011
-  * Grader, MA 3530 <i>Introduction to Differential Equations</i>, Fall 2010
-  * Grader, MA 3160 <i>Multivariable Calculus with Technology</i>, Spring 2010
-  * Grader, MA 4525 <i>Applied Vector and Tensor Mathematics</i>, Fall 2009
-
-* <b>Coach,</b> Math Learning Center, Department of Mathematical Sciences, Michigan Technological University, Houghton, MI
-  * Tutor, precalculus; calculus 1, 2, and 3; differential equations; linear algebra; and statistics, Fall 2008 - Spring 2011 
-	* Walk-ins and individual, one-on-one appointments
+<ul style="list-style-type:disc;">
+	<li><b>Graduate Teaching Assistant,</b> Department of Physics and Astronomy, University of Alabama, Tuscaloosa, AL
+		<ul style="list-style-type:disc;">
+		<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 3 sections, Spring 2018</li>
+		<li>Course assistant, PH 105 <i>General Physics with Calculus I</i> (studio format), 1 section, Spring 2014</li>
+		<li>Lab instructor, PH 106 <i>General Physics with Calculus II</i>, 1 section, Fall 2013</li>
+		<li>Lab instructor, PH 101 <i>General Physics I</i>, 2 sections, Fall 2013</li>
+		<li>Lab instructor, PH 102 <i>General Physics II</i>, 1 section, Summer 2013</li>
+		<li>Lab instructor, PH 101 <i>General Physics I</i>, 1 section, Summer 2013</li>
+		<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Spring 2013</li>
+		<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Fall 2012</li>
+		<br>
+		<br> 60 students / section
+		</ul>
+	</li>
+</ul>
 
 
+<h2>Michigan Technological University</h2>
 
+<ul style="list-style-type:disc;">
+	<li><b>Teaching Assistant,</b> Department of Mathematical Sciences, Michigan Technological University, Houghton, MI
+		<ul style="list-style-type:disc;">
+		  	<li>Grader, MA 4515 <i>Introduction to Partial Differential Equations</i>, Spring 2011</li>
+		  	<li>Grader, MA 3530 <i>Introduction to Differential Equations</i>, Fall 2010</li>
+		  	<li>Grader, MA 3160 <i>Multivariable Calculus with Technology</i>, Spring 2010</li>
+		  	<li>Grader, MA 4525 <i>Applied Vector and Tensor Mathematics</i>, Fall 2009</li>
+		</ul>
+	</li>	
+
+	<li><b>Coach,</b> Math Learning Center, Department of Mathematical Sciences, Michigan Technological University, Houghton, MI
+		<ul style="list-style-type:disc;">
+	  		<li>Tutor, precalculus; calculus 1, 2, and 3; differential equations; linear algebra; and statistics, Fall 2008 - Spring 2011</li>	
+				<ul style="list-style-type:disc;">
+					<li>Walk-ins and individual, one-on-one appointments</li>
+				</ul>
+		</ul>
+	</li>
+</ul>
 
 
 <!-- {% for post in site.teaching reversed %}
