--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,16 +12,17 @@ author_profile: true
 <ul style="list-style-type:disc;">
 	<li><b>Graduate Teaching Assistant,</b> Department of Physics and Astronomy, University of Alabama, Tuscaloosa, AL
 		<ul style="list-style-type:disc;">
-		<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 3 sections, Spring 2018</li>
-		<li>Course assistant, PH 105 <i>General Physics with Calculus I</i> (studio format), 1 section, Spring 2014</li>
-		<li>Lab instructor, PH 106 <i>General Physics with Calculus II</i>, 1 section, Fall 2013</li>
-		<li>Lab instructor, PH 101 <i>General Physics I</i>, 2 sections, Fall 2013</li>
-		<li>Lab instructor, PH 102 <i>General Physics II</i>, 1 section, Summer 2013</li>
-		<li>Lab instructor, PH 101 <i>General Physics I</i>, 1 section, Summer 2013</li>
-		<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Spring 2013</li>
-		<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Fall 2012</li>
-		<br>
-		<br> 60 students / section
+			<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 3 sections, Spring 2018</li>
+			<li>Course assistant, PH 105 <i>General Physics with Calculus I</i> (studio format), 1 section, Spring 2014</li>
+			<li>Lab instructor, PH 106 <i>General Physics with Calculus II</i>, 1 section, Fall 2013</li>
+			<li>Lab instructor, PH 101 <i>General Physics I</i>, 2 sections, Fall 2013</li>
+			<li>Lab instructor, PH 102 <i>General Physics II</i>, 1 section, Summer 2013</li>
+			<li>Lab instructor, PH 101 <i>General Physics I</i>, 1 section, Summer 2013</li>
+			<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Spring 2013</li>
+			<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Fall 2012</li>
+				<ul style="list-style-type:disc;">
+					<li>60 students / section</li>
+				</ul>
 		</ul>
 	</li>
 </ul>
@@ -38,7 +39,6 @@ author_profile: true
 		  	<li>Grader, MA 4525 <i>Applied Vector and Tensor Mathematics</i>, Fall 2009</li>
 		</ul>
 	</li>	
-
 	<li><b>Coach,</b> Math Learning Center, Department of Mathematical Sciences, Michigan Technological University, Houghton, MI
 		<ul style="list-style-type:disc;">
 	  		<li>Tutor, precalculus; calculus 1, 2, and 3; differential equations; linear algebra; and statistics, Fall 2008 - Spring 2011</li>	
@@ -49,6 +49,12 @@ author_profile: true
 	</li>
 </ul>
 
+
+<h2>Houghton High School</h2>
+
+<ul style="list-style-type:disc;">
+	<li> Coach, Houghton High School math team, Houghton, MI, Fall 2010 - Spring 2011, [http://hpts.us](http://hpts.us)</li>
+</ul>
 
 <!-- {% for post in site.teaching reversed %}
   {% include archive-single.html %}
