Modified teaching formatting

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -20,9 +20,7 @@ author_profile: true
 			<li>Lab instructor, PH 101 <i>General Physics I</i>, 1 section, Summer 2013</li>
 			<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Spring 2013</li>
 			<li>Lab instructor, PH 105 <i>General Physics with Calculus I</i>, 2 sections, Fall 2012</li>
-				<ul style="list-style-type:disc;">
-					<li>60 students / section</li>
-				</ul>
+				60 students / section
 		</ul>
 	</li>
 </ul>
@@ -42,9 +40,7 @@ author_profile: true
 	<li><b>Coach,</b> Math Learning Center, Department of Mathematical Sciences, Michigan Technological University, Houghton, MI
 		<ul style="list-style-type:disc;">
 	  		<li>Tutor, precalculus; calculus 1, 2, and 3; differential equations; linear algebra; and statistics, Fall 2008 - Spring 2011</li>	
-				<ul style="list-style-type:disc;">
-					<li>Walk-ins and individual, one-on-one appointments</li>
-				</ul>
+				Walk-ins and individual, one-on-one appointments
 		</ul>
 	</li>
 </ul>
@@ -53,7 +49,7 @@ author_profile: true
 <h2>Houghton High School</h2>
 
 <ul style="list-style-type:disc;">
-	<li> Coach, Houghton High School math team, Houghton, MI, Fall 2010 - Spring 2011, [http://hpts.us](http://hpts.us)</li>
+	<li> Coach, Houghton High School math team, Houghton, MI, Fall 2010 - Spring 2011</li>
 </ul>
 
 <!-- {% for post in site.teaching reversed %}
