Added conference talk

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -11,6 +11,8 @@ author_profile: true
 
 {% endif %}
 
+Below are selected public talks I've given as a Ph.D. student. Many internal talks have been presented at various internal, private collaboration meetings.
+
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
