Added pre-approval talk

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -11,7 +11,7 @@ author_profile: true
 
 {% endif %}
 
-Below are selected public talks I've given as a Ph.D. student. Many internal talks have been presented regularly at private collaboration research meetings. Some have been included here with restricted access.
+Below are selected public talks I've given as a Ph.D. student. Many internal talks have been regularly presented at private collaboration research meetings and some have been included here with restricted access.
 
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
